fix: update user profile editing functionality; enhance input visibility and confirmation button display

--- a/public/css/painel.css
+++ b/public/css/painel.css
@@ -63,6 +63,15 @@
 }
 
 
+.mostrar {
+  display: inline !important;
+}
+
+.esconder {
+  display: none !important;
+}
+
+
 button {
     margin: 10px;
     padding: 10px 20px;
